# zwk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: zellij-which-key-router.kdl
scripts/: build-plugin
src/: main.rs
